--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,10 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+* { margin:0; padding:0; }
+body { font: 16px Georgia Serif; }
 
-a {
-  color: #00B7FF;
-}
+#page-wrap { margin: 2% auto; color: white; }
+#page-wrap > .main { border: 1px solid #999; padding: 1%;
+              margin-bottom: 1px; color: black; }
+
+section > div , main > div{ padding: 20px; }
+header, footer, nav, main, section { background: #eee; text-align: center; }
+nav li { margin: 0px 10px 0px 0px; display: inline;}
