--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,20 +3,28 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Quiz</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
+  <link rel='stylesheet'
+        type='text/css'
+        media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+        href='/stylesheets/wide.css' />
+  <link rel='stylesheet'
+        type='text/css'
+        media='only screen and (max-width: 480px)'
+        href='/stylesheets/smartphone.css' />
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
 </head>
 <body>
   <div id="page-wrap">
     <header class="main" id="h1">
-      <h1>Quiz: el juego de las preguntas</h1>
-      <nav id="n1" role="navigation">
-        <ul>
-          <li><a href="/">Inicio</a></li>
-          <li><a href="/quizes/question">Preguntas</a></li>
-        </ul>
-      </nav>
+      <h1>Quiz<span>: el juego de las preguntas</span></h1>
     </header>
+    <nav id="n1" class="main" role="navigation">
+      <ul>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/quizes/question">Preguntas</a></li>
+      </ul>
+    </nav>
     <main class="main" id="s1">
       <%- body %>
     </main>
