--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,8 @@
     </main>
     <footer class="main" id="f1">
       <a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">¿Qué es un quiz?</a>
+       -
+      <a href="https://github.com/naggety/quiz-2015" target="_blank">Ver en Github</a>
     </footer>
   </div> <!-- #page-wrap -->
 </body>
