Añadida página de créditos

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,7 @@
       <ul>
         <li><a href="/">Inicio</a></li>
         <li><a href="/quizes/question">Preguntas</a></li>
+        <li><a href="/author">Créditos</a></li>
       </ul>
     </nav>
     <main class="main" id="s1">
