--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,7 +22,7 @@
     <nav id="n1" class="main" role="navigation">
       <ul>
         <li><a href="/">Inicio</a></li>
-        <li><a href="/quizes/question">Preguntas</a></li>
+        <li><a href="/quizes">Preguntas</a></li>
         <li><a href="/author">Créditos</a></li>
       </ul>
     </nav>
