--- a/views/quizes/list.ejs
+++ b/views/quizes/list.ejs
@@ -2,8 +2,11 @@
   <input type="text" name="search" id="search" placeholder="Busque una pregunta" />
   <input type="submit" value="buscar" />
 </form>
+<br/>
 <ul id="quizes-list">
 <% for (var i = 0; i < quizes.length; i++) { %>
   <li><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></li>
 <% } %>
+<br/>
+<a href="/quizes/new" class="button">Crear pregunta</a>
 </ul>
