--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -5,3 +5,5 @@ body { background: #333px; }
 h1 span, main h2 { display: none; }
 body { font-size: xx-large; }
 footer, input { font-size: large; }
+
+.rem { display: none; }
