--- a/views/quizes/formNew.ejs
+++ b/views/quizes/formNew.ejs
@@ -1,10 +1,10 @@
 <h2>Añadir pregunta</h2>
 <form method="post" action="/quizes">
   <label for="pregunta" class="rem">Pregunta:</label>
-  <input type="text" name="quiz[pregunta]" id="pregunta" placeholder="escriba aquí la pregunta" />
+  <input type="text" name="quiz[pregunta]" id="pregunta" placeholder="escriba aquí la pregunta" value="<%= quiz.pregunta %>" />
   <br/>
   <label for="respuesta" class="rem">Respuesta:</label>
-  <input type="text" name="quiz[respuesta]" id="respuesta" placeholder="escriba aquí la respuesta" />
+  <input type="text" name="quiz[respuesta]" id="respuesta" placeholder="escriba aquí la respuesta" value="<%= quiz.respuesta %>" />
   <br/>
   <a href="/quizes">Cancelar</a>
   <input type="submit"  value="Guardar" />
