--- a/views/quizes/list.ejs
+++ b/views/quizes/list.ejs
@@ -5,7 +5,11 @@
 <br/>
 <ul id="quizes-list">
 <% for (var i = 0; i < quizes.length; i++) { %>
-  <li><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></li>
+  <li>
+    <a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
+     -
+    <a href="quizes/<%= quizes[i].id %>/edit">editar</a>
+  </li>
 <% } %>
 <br/>
 <a href="/quizes/new" class="button">Crear pregunta</a>
