Categorización de preguntas

--- a/views/quizes/formEdit.ejs
+++ b/views/quizes/formEdit.ejs
@@ -1,11 +1,4 @@
 <h2>Editar pregunta</h2>
 <form method="post" action="/quizes/<%= quiz.id %>?_method=put">
-  <label for="pregunta" class="rem">Pregunta:</label>
-  <input type="text" name="quiz[pregunta]" id="pregunta" placeholder="escriba aquí la pregunta" value="<%= quiz.pregunta %>" />
-  <br/>
-  <label for="respuesta" class="rem">Respuesta:</label>
-  <input type="text" name="quiz[respuesta]" id="respuesta" placeholder="escriba aquí la respuesta" value="<%= quiz.respuesta %>" />
-  <br/>
-  <a href="/quizes">Cancelar</a>
-  <input type="submit"  value="Guardar" />
+<% include form.ejs %>
 </form>
