--- a/views/quizes/list.ejs
+++ b/views/quizes/list.ejs
@@ -6,7 +6,7 @@
   <table id="quizes-list">
   <% for (var i = 0; i < quizes.length; i++) { %>
     <tr>
-      <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+      <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %> (<%= quizes[i].tema %>)</a></td>
       <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
       <td>
         <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete" style="display:inline;">
