--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,17 @@
 <body>
   <div id="page-wrap">
     <header class="main" id="h1">
+      <span class="right">
+        <% if (!session.user) { %>
+          <a href="/login">login</a>
+        <% } else { %>
+          <%= session.user.username %>
+           -
+          <form class="form-logout" method="post" action="/logout">
+            <input type="submit" value="logout" />
+          </form>
+        <% } %>
+      </span>
       <h1>Quiz<span>: el juego de las preguntas</span></h1>
     </header>
     <nav id="n1" class="main" role="navigation">
