--- a/views/quizes/list.ejs
+++ b/views/quizes/list.ejs
@@ -7,6 +7,7 @@
   <% for (var i = 0; i < quizes.length; i++) { %>
     <tr>
       <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %> (<%= quizes[i].tema %>)</a></td>
+      <% if (session.user) { %>
       <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
       <td>
         <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete" style="display:inline;">
@@ -15,8 +16,11 @@
           </button>
         </form>
       </td>
+      <% } %>
     </tr>
   <% } %>
   </table>
+<% if (session.user) { %>
 <br/>
 <a href="/quizes/new"><button>Crear pregunta</button></a>
+<% } %>
